# FEM-bench

./: .coverage  .coverage 2  .gitignore  LICENSE  README.md  SYSTEM_PROMPT_STUDY.md  TEMPERATURE_STUDY.md  accuracy_at_3_joint_per_test_all.md  accuracy_at_3_joint_per_test_system_prompt.md  accuracy_at_3_joint_per_test_temp025.md  accuracy_at_3_task_table_all.md  accuracy_at_3_task_table_temp025.md  accuracy_at_k_table.py  extra.py  joint_tests_sorted_colored.md  pyproject.toml  requirements.txt  run_pipeline.py  task_table_sorted_colored.md  task_template.py
automation_scripts/: linear_elastic_1d.py  linear_elastic_1d_create_prompts.py  linear_elastic_1d_evaluate_results.py  linear_elastic_1d_failure_examples.py  linear_elastic_1d_yaml_builder.py
environments/: tier1_environment.yaml
llm_api/: claude_client.py  clean_utils.py  deepseek_client.py  gemini_client.py  llm_clients.py  openai_client.py  togetherai_client.py
llm_outputs/: FEM_1D_linear_elastic_CC0_H0_T0_code_gemini-3-pro-preview.py  FEM_1D_linear_elastic_CC0_H0_T0_test_gemini-2.5-pro.py  FEM_1D_uniform_mesh_CC0_H0_T0_code_gemini-3-pro-preview.py  FEM_2D_quad8_element_distributed_load_CC0_H0_T0_code_gemini-2.5-pro.py  FEM_2D_quad8_element_distributed_load_CC0_H0_T0_code_gemini-3-pro-preview.py  FEM_2D_quad8_element_distributed_load_CC0_H0_T0_test_gemini-3-pro-preview.py  FEM_2D_quad8_integral_of_derivative_CC0_H3_T3_code_gemini-2.5-pro.py  FEM_2D_quad8_integral_of_derivative_CC0_H3_T3_test_gemini-3-pro-preview.py  FEM_2D_quad8_mesh_rectangle_CC0_H0_T0_code_gemini-2.5-pro.py  (+338 more)
(+4881 files in other folders)
